--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.1.8", features = ["derive"] }
+swc_ecma_parser = "0.130.2"
+swc_common = { version= "0.29.37", features=["tty-emitter"]}
+swc_ecma_ast = "0.100.1"
