--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ swc_common = { version= "0.29.37", features=["tty-emitter"] }
 swc_ecma_ast = "0.100.1"
 async-openai = "0.9.4"
 tokio = { version = "1.25.0", features = ["full"] }
+futures = "0.3.27"
